apps/base/media/tracearr/tracearr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tracearr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://tracearr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Tracearr"
    gethomepage.dev/description: "Media activity + history analytics (Jellyfin/Plex)"
    gethomepage.dev/group: "Media"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`tracearr.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: tracearr
          port: 80
  tls: {}
